Make the folder organized

--- a/javacript-examples/.env.sample
+++ b/javacript-examples/.env.sample
@@ -1,5 +1,6 @@
 TESTNET_URL=https://localhost:8545
 
+MAINNET=https://rpc.ankr.com/eth
 HOLESKY_URL=https://rpc.holesky.ethpandaops.io
 LOCALNET_URL=http://127.0.0.1:8545
 SEPOLIA_URL=https://
