--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
-MAINNET = 'https://eth-mainnet.g.alchemy.com/v2/{API-KEY}'
-GOERLI = 'https://eth-goerli.public.blastapi.io'
+MAINNET = 'https://rpc.ankr.com/eth'
+GOERLI = 'https://rpc.ankr.com/eth_goerli'
