--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "clean": "rm -rf cache artifacts typechain typechain-types",
     "test": "hardhat test test/*.ts",
     "test:longer": "hardhat test test/longer/*.ts",
-    "attack1": "hardhat test test/1-call-attacks-1.ts",
-    "attack2": "hardhat test test/1-call-attacks-2.ts",
-    "attack3": "hardhat test test/1-call-attacks-3.ts",
+    "attack1": "hardhat test test/1-call-attack-1.ts",
+    "attack2": "hardhat test test/1-call-attack-2.ts",
+    "attack3": "hardhat test test/1-call-attack-3.ts",
     "dos1": "hardhat test test/longer/3-dos-1.ts",
     "dos2": "hardhat test test/3-dos-2.ts",
     "dos3": "hardhat test test/3-dos-3.ts",
-    "dao1": "hardhat test test/2-dao-attacks-1.ts",
+    "dao1": "hardhat test test/2-dao-attack-1.ts",
+    "dao2": "hardhat test test/2-dao-attack-2.ts",
+    "dao3": "hardhat test test/2-dao-attack-3.ts",
     "sensitive2": "hardhat test test/0-sensitive-on-chain-data-2.ts",
     "sensitive3": "hardhat test test/0-sensitive-on-chain-data-3.ts",
     "unchecked1": "hardhat test test/5-unchecked-return-1.ts",
-    "vault1": "hardhat test test/6-optimizer-vaults-1.ts",
+    "vault1": "hardhat test test/6-optimizer-vault-1.ts",
     "coverage": "yarn clean; hardhat coverage --config ./hardhat-coverage.config.ts --solcoverjs ./config/.solcover.js",
     "lint": "prettier --write --config .prettierrc 'contracts/**/*.sol' 'scripts/**/*.ts' 'test/**/*.ts'",
     "lint:check": "yarn lint:check:format && yarn lint:check:solhint && yarn lint:check:eslint",
