--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sensitive3": "hardhat test test/0-sensitive-on-chain-data-3.ts",
     "unchecked1": "hardhat test test/5-unchecked-return-1.ts",
     "vault1": "hardhat test test/6-optimizer-vault-1.ts",
+    "oracle1": "hardhat test test/7-oracle-manipulation-1.ts",
     "coverage": "yarn clean; hardhat coverage --config ./hardhat-coverage.config.ts --solcoverjs ./config/.solcover.js",
     "lint": "prettier --write --config .prettierrc 'contracts/**/*.sol' 'scripts/**/*.ts' 'test/**/*.ts'",
     "lint:check": "yarn lint:check:format && yarn lint:check:solhint && yarn lint:check:eslint",
