Add a front-running attack exercise

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vault1": "hardhat test test/6-optimizer-vault-1.ts",
     "oracle1": "hardhat test test/7-oracle-manipulation-1.ts",
     "destruct1": "hardhat test test/8-selfdestruct-1.ts",
+    "front1": "hardhat test test/9-front-running-1.ts",
     "coverage": "yarn clean; hardhat coverage --config ./hardhat-coverage.config.ts --solcoverjs ./config/.solcover.js",
     "lint": "prettier --write --config .prettierrc 'contracts/**/*.sol' 'scripts/**/*.ts' 'test/**/*.ts'",
     "lint:check": "yarn lint:check:format && yarn lint:check:solhint && yarn lint:check:eslint",
